--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 osx_image: xcode7
 
 script:
-  - xcodebuild clean build test -project SwiftClient.xcodeproj -scheme SwiftClient -sdk iphonesimulator
+  - xcodebuild clean build test -project SwiftClient.xcodeproj -scheme SwiftClient
